--- a/_output.yml
+++ b/_output.yml
@@ -5,6 +5,6 @@ bookdown::gitbook:
     toc:
       collapse: subsection
       before: |
-        <img src="img/forwards.png" style="width:300px;height:180px;padding-bottom:0px;"></img>
+        <img src="img/Rlogo.png" style="width:300px;height:180px;padding-bottom:0px;"></img>
       after: |
         <li><a href="https://github.com/rstudio/bookdown" target="blank">Published with bookdown</a></li>
