--- a/_output.yml
+++ b/_output.yml
@@ -8,6 +8,6 @@ bookdown::gitbook:
     toc:
       collapse: subsection
       before: |
-        <img src="img/Rlogo.png" style="width:300px;height:180px;padding-bottom:0px;"></img>
+        <img src="img/Rlogo.png" style="width:150px;padding:10px 0px 0px 10px;"></img>
       after: |
         <li><a href="https://github.com/rstudio/bookdown" target="blank">Published with bookdown</a></li>
