add edit settings

--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -4,3 +4,4 @@ repo: https://github.com/forwards/rdevguide
 output_dir: docs
 clean: [packages.bib, bookdown.bbl]
 new_session: yes
+edit: https://github.com/forwards/rdevguide/edit/master/%s
