--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -1,7 +1,7 @@
 book_filename: "rdevguide"
 chapter_name: "Chapter "
-repo: https://github.com/forwards/rdevguide
+repo: https://github.com/r-devel/rdevguide
 output_dir: docs
 clean: [packages.bib, bookdown.bbl]
 new_session: yes
-edit: https://github.com/forwards/rdevguide/edit/master/%s
+edit: https://github.com/r-devel/rdevguide/edit/main/%s
