--- a/_output.yml
+++ b/_output.yml
@@ -5,6 +5,7 @@ bookdown::gitbook:
   split_by: chapter
   config:
     sharing:
+      github: true
       facebook: false
       twitter: false
     toc:
