Match version on upload-artifact and download-artifact

--- a/.github/workflows/deploy_bookdown.yml
+++ b/.github/workflows/deploy_bookdown.yml
@@ -23,7 +23,7 @@ jobs:
         run: Rscript -e 'bookdown::render_book("index.Rmd", "bookdown::pdf_book")'
       - name: Render ePub
         run: Rscript -e 'bookdown::render_book("index.Rmd", "bookdown::epub_book")'
-      - uses: actions/upload-artifact@v3
+      - uses: actions/upload-artifact@v4
         with:
           name: docs
           path: docs/
@@ -33,11 +33,12 @@ jobs:
 # and also add secrets for a GH_PAT and EMAIL to the repository
 # gh-action from Cecilapp/GitHub-Pages-deploy
   checkout-and-deploy:
+   name: Check-out and deploy
    runs-on: ubuntu-latest
    needs: bookdown
    steps:
      - name: Checkout
-       uses: actions/checkout@main
+       uses: actions/checkout@v4
      - name: Download artifact
        uses: actions/download-artifact@v4
        with:
