--- a/_output.yml
+++ b/_output.yml
@@ -11,7 +11,7 @@ bookdown::gitbook:
     toc:
       collapse: subsection
       before: |
-        <img src="img/cover_page.png" style="width:150px;padding:10px 0px 0px 10px;display: block;margin:auto;"></img>
+        <img src="img/cover_page_scriberia.png" style="width:150px;padding:10px 0px 0px 10px;display: block;margin:auto;"></img>
       after: |
         <li><a href="https://github.com/rstudio/bookdown" target="blank">Published with bookdown</a></li>
     download: ["pdf", "epub"]
