--- a/_output.yml
+++ b/_output.yml
@@ -10,8 +10,6 @@ bookdown::gitbook:
       twitter: false
     toc:
       collapse: subsection
-      before: |
-        <img src="img/cover_page_scriberia.png" style="width:150px;padding:10px 0px 0px 10px;display: block;margin:auto;"></img>
       after: |
         <li><a href="https://github.com/rstudio/bookdown" target="blank">Published with bookdown</a></li>
     download: ["pdf", "epub"]
@@ -21,6 +19,7 @@ bookdown::gitbook:
 bookdown::pdf_book:
   includes:
     in_header: preamble.tex
+    before_body: frontpage.tex
   latex_engine: xelatex
   citation_package: natbib
   keep_tex: yes
