--- a/_quarto.yml
+++ b/_quarto.yml
@@ -17,16 +17,17 @@ book:
     - issue_tracking.qmd
     - reporting_bugs.qmd
     - submitting_feature_requests.qmd
-    - reviewing_bugs.qmd                
-    - finding_the_source.qmd             
+    - reviewing_bugs.qmd
+    - finding_the_source.qmd
     - lifecycle_of_a_patch.qmd
-    - documenting.qmd                    
-    - message_translations.qmd         
+    - documenting.qmd
+    - message_translations.qmd
+    - testing_in_r.qmd
     - testing_pre_release_r_versions.qmd
     - r_core_developers.qmd
-    - where_to_get_help.qmd              
-    - news_and_announcements.qmd   
-    - developer_tools.qmd             
+    - where_to_get_help.qmd
+    - news_and_announcements.qmd
+    - developer_tools.qmd
 
 format:
   html:
