--- a/_quarto.yml
+++ b/_quarto.yml
@@ -30,6 +30,7 @@ book:
     - chapters/where_to_get_help.qmd              
     - chapters/news_and_announcements.qmd  
     - chapters/developer_tools.qmd    
+    - chapters/ide_setup.qmd    
     - chapters/additional_resources.qmd 
     - chapters/r_core_developers.qmd      
 
